force-app/main/default/objects/WSM_Document_Section__c/WSM_Document_Section__c.object-meta.xml
<CustomObject>
    <label>WSM Document Section</label>
    <nameField>
        <label>WSM Document Section Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WSM Document Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>