force-app/main/default/objects/WSM_Document_Section__c/fields/Break_Page_After_Section__c.field-meta.xml
<CustomField>
    <fullName>Break_Page_After_Section__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this for the document to break to the next page after this section.</description>
    <inlineHelpText>Check this for the document to break to the next page after this section.</inlineHelpText>
    <label>Break Page After Section?</label>
    <type>Checkbox</type>
</CustomField>