force-app/main/default/objects/WSM_Document_Section__c/fields/Section_Order__c.field-meta.xml
<CustomField>
    <fullName>Section_Order__c</fullName>
    <description>This is the order that the sections will be rendered in.</description>
    <inlineHelpText>This is the order that the sections will be rendered in.</inlineHelpText>
    <label>Section Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>