force-app/main/default/objects/WSM_Document_Section__c/fields/Use_Template_Footer_On_This_Section__c.field-meta.xml
<CustomField>
    <fullName>Use_Template_Footer_On_This_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will use the template footer on the bottom of this generated section.
Note that this works best when the page breaks after this section.</description>
    <inlineHelpText>This will use the template footer on the bottom of this generated section.
Note that this works best when the page breaks after this section.</inlineHelpText>
    <label>Use Template Footer On This Section</label>
    <type>Checkbox</type>
</CustomField>