force-app/main/default/objects/WSM_Document_Section__c/fields/Use_Template_Header_On_This_Section__c.field-meta.xml
<CustomField>
    <fullName>Use_Template_Header_On_This_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to include the header created on the template for this section. Note this works best when break after section is checked.</description>
    <inlineHelpText>Check this to include the header created on the template for this section. Note this works best when break after section is checked.</inlineHelpText>
    <label>Use Template Header On This Section</label>
    <type>Checkbox</type>
</CustomField>