force-app/main/default/objects/WSM_Document_Section__c/fields/WSM_Document_Template__c.field-meta.xml
<CustomField>
    <fullName>WSM_Document_Template__c</fullName>
    <label>WSM Document Template</label>
    <referenceTo>WSM_Document_Template__c</referenceTo>
    <relationshipLabel>WSM Document Sections</relationshipLabel>
    <relationshipName>WSM_Document_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>