force-app/main/default/objects/WSM_Document_Section__c/fields/WSM_Section_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>WSM_Section_Subtitle__c</fullName>
    <description>The subtitle section for a specific page.</description>
    <inlineHelpText>The subtitle section for a specific page.</inlineHelpText>
    <label>WSM Section Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>